--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ footer {
 }
 
 .page-content {
-  background-image: url("../img/burgers.jpg");
+  background-image: url("../img/burgers.avif");
   background-size: cover;
 }
 
